<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="custom_tip_percentage">Custom %</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="amount">Amount</string>
    <string name="after">After Tax</string>
    <string name="before">Before Tax</string>
    <string name="tiponbill">Tip On Bill</string>
    <string name="tax">Tax</string>
    <string name="taxp">Tax %</string>
    <string name="totalPerPerson">Total Per Person</string>
    <string name="person">Person</string>
</resources>
