<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.example.tipcalc1.MainActivity" >

    
    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="21" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="1"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="1"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="2"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|top"
        android:layout_row="2"
        android:max="30"
        android:progress="18" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_width="239dp"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="5" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/eighteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="6"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_width="239dp"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="6" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="8"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="8" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="216dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="4" >

        <RadioButton
            android:id="@+id/after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:checked="true"
            android:text="@string/after" />

        <RadioButton
            android:id="@+id/before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:checked="false"
            android:text="@string/before" />
    </RadioGroup>

    <TextView
        android:id="@+id/tipOnBillTextView"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="4"
        android:text="@string/tiponbill"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/taxLayout"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|top"
        android:layout_row="7" >

        <TextView
            android:id="@+id/tax15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/taxCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/taxTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="7"
        android:text="@string/tax"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/taxInsertTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="@string/taxp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/taxInsertEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="13.99" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="241dp"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="10" >

        <TextView
            android:id="@+id/pp15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ppCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalPerPersonTextView"
        android:layout_width="78dp"
        android:layout_height="65dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="10"
        android:text="@string/totalPerPerson"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/personTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="9"
        android:text="@string/person"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/personEditText"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="9"
        android:ems="10"
        android:inputType="number"
        android:text="1" />

</GridLayout>